Fix some missing permissions for the logon stub process needed to be able to run Chrome during winlogon

Bug: 887444

Change-Id: Ie6c54855cee2b95ef6cb0de1829251d324548733
Reviewed-on: https://chromium-review.googlesource.com/c/1301850
Commit-Queue: Tien Mai <tienmai@chromium.org>
Reviewed-by: Roger Tawa <rogerta@chromium.org>
Cr-Commit-Position: refs/heads/master@{#606173}
Former-commit-id: 07e61f32529fdca97a8b120a00e9f622fede2374